packages/lib-oer/test/__snapshots__/boolean.test.ts.snap
// Vitest Snapshot v1

exports[`bitstring > schema > should refuse to parse a value with extra bytes at the end 1`] = `
{
  "failure": [ParseError: non-canonical encoding - additional bytes present after the expected end of data

    ff 00  
       ^^],
  "success": false,
}
`;
